tests/parse-fail/vec_no_type.fl.0.exp
Error: vec_no_type.fl(3,24): Expected type signature, but found: }
pub mod vec_no_size {
    pub struct VecNoSize {
        pub v : {42 .. };
                       ^  
    }
}
