tests/parse-fail/vec_no_type.fl
pub mod vec_no_size {
    pub struct VecNoSize {
        pub v : {42 .. };
    }
}
